Correct size of heading title, section title, text on mobile display.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -189,10 +189,10 @@ $main-page-date-desktop: $main-page-title-desktop*0.2;
 $main-page-date-mobile: $main-page-title-mobile*0.2;
 
 $story-show-title-desktop: 85px;
-$story-show-title-mobile: 80px;
+$story-show-title-mobile: 55px;
 
 $story-show-section-title-desktop: 60px;
-$story-show-section-title-desktop: 65px;
+$story-show-section-title-mobile: 45px;
 
 $story-show-text-desktop: 17px;
 $story-show-text-mobile: 20px;
