--- a/app/assets/stylesheets/stories.scss
+++ b/app/assets/stylesheets/stories.scss
@@ -240,6 +240,7 @@
 
   .story-show-header-title{
     bottom: 180px;
+    font-size: $story-show-title-mobile;
   }
 
   .story-show-header-button {
@@ -249,6 +250,7 @@
   .story-show-section-title{
     padding-top: 105px;
     margin-top: 0;
+    font-size: $story-show-section-title-mobile;
   }
 
   .show-story-maps-properties{
@@ -266,6 +268,13 @@
   .story-show-social-icons{
     margin-bottom: 15px;
   }
+
+  .story-show-section-text{
+    font-size: $story-show-text-mobile;
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+
 }
 
 /* Small devices (tablets, 768px and up) */
